tdf#102374: regex allow ReplaceBackReferences for $ search

Since searching for $ spans nodes, and normal searches don't find it
(see bChkParaEnd and bChkEmptyPara), all "replace" items were
being used verbatim instead of being transformed. So, a similar
"just make it work" hack is needed here.

This allows proper replacement for \, \&, \$, and 	.

One thing I was not able to accomplish was to support $0
or &. I couldn't find a character to put in rStr as an exact
replacement for the Paragraph end.
 inserted a line break,
not a paragraph break.  sal_Unicode (10) did nothing.
Anyway, it doesn't make much sense to search for Paragraph end
and replace with Paragraph end anyway (unless you just want to add
something to the end of every paragraph...) In that case, you
should be able to use "xxx
" instead of "xxx&"

Using
 could be interesting as search $ / replace & would do the
opposite of search
 replace
.

Change-Id: I59d760e27acacff679decdcb7fcf337f3b4a1fa1